[gd_scene load_steps=3 format=2]

[ext_resource path="res://accesorios/scenes/main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://icon/280.jpg" type="Texture" id=2]

[node name="main_menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 495.5, 298.5 )
scale = Vector2( 0.632682, 0.825905 )
texture = ExtResource( 2 )

[node name="button_start" type="Button" parent="."]
margin_left = 373.0
margin_top = 195.0
margin_right = 625.0
margin_bottom = 215.0
text = "start"

[node name="button_about" type="Button" parent="."]
margin_left = 373.0
margin_top = 320.0
margin_right = 625.0
margin_bottom = 340.0
text = "about"

[node name="button_exit" type="Button" parent="."]
margin_left = 373.0
margin_top = 446.0
margin_right = 625.0
margin_bottom = 466.0
text = "exit"

[connection signal="pressed" from="button_start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="button_about" to="." method="_on_button_about_pressed"]
[connection signal="pressed" from="button_exit" to="." method="_on_button_exit_pressed"]
